# EasINGInious

./: .dockerignore  .gitmodules  Dockerfile  README.md  build_container.py  create_user.py  docker-compose.installer.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  inginious-entrypoint.sh  inginious.conf  modules.conf  pyproject.toml
inginious_container_api/: pyproject.toml
src/easinginious/: __init__.py  __main__.py
