[tool.poetry]
name = "easinginious"
version = "0.1.0"
description = ""
authors = ["Berg Lucas <55436804+BergLucas@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
inginious = { path = "inginious" }
flask = "^2.0.0"
werkzeug = "^2.0.0"
setuptools = "^75.1.0"
pymongo = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
