[project]
name = "easinginious"
version = "0.9.1"
description = "EasINGInious is a project which tries to simplify the installation of INGInious using Docker in Docker (DinD)."
authors = [
    { name = "Berg Lucas", email = "55436804+BergLucas@users.noreply.github.com" },
]
readme = "README.md"
license = "AGPL-3.0"
keywords = ["Poetry", "easinginious"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
requires-python = ">=3.9,<4.0"
dependencies = ["inginious[cgi,ldap,saml2] @ external/inginious"]

[project.scripts]
easinginious = "easinginious:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
